JEKT-1209 HM2 job created ❇️ New     - Job        - MD_MATL_HM2_JOB
🔁 Modified
    - Job
       - MD_MATL_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7921,6 +7921,7 @@ jobs:
     - pipelines/SAP_MD_MATL_BBL
     - pipelines/SAP_MD_MATL_HCS
     - pipelines/JDE_BW2_MD_MATL
+    - pipelines/SAP_MD_MATL_HM2
     - pipelines/SAP_MD_MATL_BBA_BBN
     - pipelines/SAP_MD_MATL_TAI
     - pipelines/JDE_MD_MATL
@@ -7930,7 +7931,32 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 13:05:54'
-    modifiedAt: '2023-05-05 13:21:08'
+    modifiedAt: '2023-05-05 14:17:37'
+    author: natkins7@its.jnj.com
+  jobs/MD_MATL_HM2_JOB:
+    name: MD_MATL_HM2_JOB
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_MATL_HM2
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-05 14:18:48'
+    modifiedAt: '2023-05-05 14:19:14'
     author: natkins7@its.jnj.com
 functions:
   author: null
