--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -418,14 +418,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DELV_4:
-    name: MD_DELV_4_taishan
-    description: Mapping pipeline  ['taishan']
+    name: SAP_MD_DELV_TAI
+    description: Mapping pipeline  ['tai']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-04-27 04:29:40'
+    modifiedAt: '2023-05-05 14:22:59'
     datasets:
       inputs: []
       outputs:
