--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -433,14 +433,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DELV_5:
-    name: MD_DELV_5_p01
+    name: SAP_MD_DELV_P01
     description: Mapping pipeline  ['p01']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-04-27 04:30:27'
+    modifiedAt: '2023-05-05 14:25:49'
     datasets:
       inputs: []
       outputs:
