--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -448,14 +448,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DELV_6:
-    name: MD_DELV_6_geu
+    name: SAP_MD_DELV_GEU
     description: Mapping pipeline  ['geu']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-04-27 04:31:16'
+    modifiedAt: '2023-05-05 14:27:11'
     datasets:
       inputs: []
       outputs:
