--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -463,14 +463,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DELV_7:
-    name: MD_DELV_7_svs
+    name: SAP_MD_DELV_SVS
     description: Mapping pipeline  ['svs']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-04-27 04:32:00'
+    modifiedAt: '2023-05-05 14:31:03'
     datasets:
       inputs: []
       outputs:
