--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -478,14 +478,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DELV_8:
-    name: MD_DELV_8_mbp
+    name: SAP_MD_DELV_MBP
     description: Mapping pipeline  ['mbp']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-04-27 04:32:52'
+    modifiedAt: '2023-05-05 14:33:51'
     datasets:
       inputs: []
       outputs:
