--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -373,14 +373,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DELV_10:
-    name: MD_DELV_10_hm2
+    name: SAP_MD_DELV_HMD
     description: Mapping pipeline  ['hm2']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-05 12:40:58'
+    modifiedAt: '2023-05-05 14:46:52'
     datasets:
       inputs: []
       outputs:
