--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -493,14 +493,15 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DELV_9:
-    name: MD_DELV_9_bw2_gmd_jsw_jet_mtr
-    description: Mapping pipeline  ['bw2', 'gmd', 'jsw', 'jet', 'mtr']
+    name: SAP_MD_DELV_BW2_GMD_JET_JSW_MTR_DEU_JES_JEM_SJD_DJD
+    description: Mapping pipeline  ['bw2', 'gmd', 'jsw', 'jet', 'mtr', 'deu, 'jes',
+      'jem', 'sjd', 'djd']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-05 13:48:29'
+    modifiedAt: '2023-05-05 15:07:04'
     datasets:
       inputs: []
       outputs:
