--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1647,10 +1647,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-18 01:51:03'
-    modifiedAt: '2023-05-05 14:26:04'
+    modifiedAt: '2023-05-05 15:07:04'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T016T
+      - datasets/DS_SAP_01_TBRCT
       - datasets/DS_SAP_01_TVAST
       - datasets/DS_SAP_03_KNA1
       outputs:
@@ -6294,7 +6295,7 @@ datasets:
     description: ''
     author: hgermi1@its.jnj.com
     createdAt: '2023-04-15 18:54:15'
-    modifiedAt: '2023-04-20 15:43:24'
+    modifiedAt: '2023-05-05 14:58:23'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6379,6 +6380,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-05-01 11:40:16'
         modifiedAt: '2023-05-01 11:40:16'
+  datasets/DS_SAP_01_TBRCT:
+    name: DS_SAP_01_TBRCT
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-05-05 15:03:59'
+    modifiedAt: '2023-05-05 15:04:45'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-05-05 15:03:59'
+        modifiedAt: '2023-05-05 15:03:59'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
