--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7894,6 +7894,31 @@ jobs:
     createdAt: '2023-04-19 13:29:27'
     modifiedAt: '2023-04-27 04:17:11'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_DELV_HM2:
+    name: JOB_MD_DELV_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/MD_DELV_10
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-05 15:37:12'
+    modifiedAt: '2023-05-05 15:37:45'
+    author: jcovezd1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
