--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1647,13 +1647,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-18 01:51:03'
-    modifiedAt: '2023-05-05 15:07:04'
+    modifiedAt: '2023-05-05 15:46:58'
     datasets:
       inputs:
-      - datasets/DS_SAP_01_T016T
       - datasets/DS_SAP_01_TBRCT
       - datasets/DS_SAP_01_TVAST
       - datasets/DS_SAP_03_KNA1
+      - datasets/SAP_T016T
       outputs:
       - datasets/MD_CUST
     subgraphs: []
@@ -6295,7 +6295,7 @@ datasets:
     description: ''
     author: hgermi1@its.jnj.com
     createdAt: '2023-04-15 18:54:15'
-    modifiedAt: '2023-05-05 14:58:23'
+    modifiedAt: '2023-05-05 15:28:16'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6395,6 +6395,21 @@ datasets:
         author: jcacere7@its.jnj.com
         createdAt: '2023-05-05 15:03:59'
         modifiedAt: '2023-05-05 15:03:59'
+  datasets/SAP_T016T:
+    name: SAP_T016T
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-05-05 15:43:10'
+    modifiedAt: '2023-05-05 15:43:10'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-05-05 15:43:10'
+        modifiedAt: '2023-05-05 15:43:10'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
