--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7530,13 +7530,14 @@ jobs:
     - pipelines/SAP_01_MD_CUST
     - pipelines/SAP_01_MD_CUST_HCS
     - pipelines/JDE_01_MD_CUST
+    - pipelines/SAP_01_MD_SHIP_SVS
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 01:33:52'
-    modifiedAt: '2023-05-05 13:15:51'
+    modifiedAt: '2023-05-05 16:37:09'
     author: jcacere7@its.jnj.com
   jobs/JOB_MD_CUST_HM2:
     name: JOB_MD_CUST_HM2
@@ -7561,7 +7562,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 13:19:19'
-    modifiedAt: '2023-05-05 16:28:23'
+    modifiedAt: '2023-05-05 16:36:07'
     author: jcacere7@its.jnj.com
 functions:
   author: null
