JEKT-1209 Created new pipeline due to missing t023t on HMD side. 🔁 Modified     - Pipeline        - SAP_MD_MATL_HMD        - JDE_BW2_MD_MATL     - Dataset        - MD_MATL     - Job        - MD_MATL_JOB
❇️ New
    - Pipeline
       - SAP_MD_MATL_HMD1

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1721,7 +1721,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-28 09:03:25'
-    modifiedAt: '2023-05-05 14:13:56'
+    modifiedAt: '2023-05-05 17:02:35'
     datasets:
       inputs:
       - datasets/DS_SAP_01_CAWNT
@@ -1763,13 +1763,37 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-05 08:03:11'
-    modifiedAt: '2023-05-05 08:44:14'
+    modifiedAt: '2023-05-05 17:00:33'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0005_41
       - datasets/DS_JDE_01_F4101
       - datasets/DS_JDE_01_F4104
       - datasets/DS_JDE_01_F6060002
+      outputs:
+      - datasets/MD_MATL
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_MD_MATL_HMD1:
+    name: SAP_MD_MATL_HMD1
+    description: MD Material for SAP systems with matching L0 schema and mapping
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-05 17:07:51'
+    modifiedAt: '2023-05-05 17:10:41'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_CAWNT
+      - datasets/DS_SAP_01_T006A
+      - datasets/DS_SAP_01_TSPAT
+      - datasets/DS_SAP_AUSP_01
+      - datasets/DS_SAP_CABN_01
+      - datasets/DS_SAP_INOB_01
+      - datasets/DS_SAP_MAKT_01
+      - datasets/DS_SAP_MARA_HM2
+      - datasets/DS_SAP_T134T_BBA_BBL_BBN
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -2920,7 +2944,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-05 13:28:21'
+    modifiedAt: '2023-05-05 17:10:41'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7931,7 +7955,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 13:05:54'
-    modifiedAt: '2023-05-05 14:17:37'
+    modifiedAt: '2023-05-05 16:57:33'
     author: natkins7@its.jnj.com
   jobs/MD_MATL_HM2_JOB:
     name: MD_MATL_HM2_JOB
