--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1785,14 +1785,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_SLS_ORDR_BBA:
-    name: SAP_01_MD_SLS_ORDR_BBA
+    name: SAP_01_MD_SLS_ORDR_BBA_MRS_FSN
     description: ''
     author: lsorarra@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-05 14:08:27'
-    modifiedAt: '2023-05-05 15:26:08'
+    modifiedAt: '2023-05-05 17:27:40'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T001
