--- a/src/datasets/MD_BOM_HDR/pbt_aspects.yml
+++ b/src/datasets/MD_BOM_HDR/pbt_aspects.yml
@@ -25,7 +25,7 @@ schema:
       tags: []
   - name: ALT_BOM_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -51,13 +51,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: PREV_HDR_CNTR_NBR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: CRT_DTTM
     type: timestamp
     nullable: true
@@ -72,21 +65,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: BOM_UOM_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: BOM_TXT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BOM_STS_CD
     type: string
     nullable: true
     metadata:
@@ -95,20 +74,6 @@ schema:
       tags: []
   - name: BOM_VLD_TO_DTTM
     type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DEL_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BOM_BASE_QTY
-    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -131,13 +96,6 @@ schema:
   - name: DAI_UPDT_DTTM
     type: timestamp
     nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l0_upt_
-    type: timestamp
-    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -166,6 +124,13 @@ schema:
   - name: _deleted_
     type: string
     nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l0_upt_
+    type: timestamp
+    nullable: true
     metadata:
       description: ''
       mappings: []
