JEKT-14 ❇️ New     - Job        - JOB_MD_BOM_HDR_HMD
🔁 Modified
    - Job
       - JOB_MD_BOM_HDR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7453,7 +7453,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-04 15:45:43'
-    modifiedAt: '2023-05-05 15:11:02'
+    modifiedAt: '2023-05-05 18:26:10'
     author: smille29@its.jnj.com
   jobs/JOB_MD_MATL_INV_HM2:
     name: JOB_MD_MATL_INV_HM2
@@ -7960,6 +7960,31 @@ jobs:
     createdAt: '2023-04-25 20:42:37'
     modifiedAt: '2023-04-27 20:52:46'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_BOM_HDR_HMD:
+    name: JOB_MD_BOM_HDR_HMD
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-05 18:26:51'
+    modifiedAt: '2023-05-05 18:28:20'
+    author: fsano1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
