JEKT-1395 ❇️ New     - Pipeline        - SAP_01_MD_SLS_ORDR_BBL
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
       - SAP_01_MD_SLS_ORDR_HCS
    - Dataset
       - MD_SLS_ORDR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1727,7 +1727,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-01 19:17:50'
-    modifiedAt: '2023-05-05 14:04:27'
+    modifiedAt: '2023-05-05 18:33:11'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T001
@@ -1760,7 +1760,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-05 13:15:30'
-    modifiedAt: '2023-05-05 13:35:23'
+    modifiedAt: '2023-05-05 18:39:45'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T001
@@ -1810,6 +1810,35 @@ pipelines:
       - datasets/DS_SAP_01_TVV3T
       - datasets/DS_SAP_01_TVV4T
       - datasets/DS_SAP_01_TVV5T
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBUK
+      outputs:
+      - datasets/MD_SLS_ORDR
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_BBL:
+    name: SAP_01_MD_SLS_ORDR_BBL
+    description: ''
+    author: lsorarra@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-05 19:00:19'
+    modifiedAt: '2023-05-05 19:23:57'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_T001
+      - datasets/DS_SAP_01_T176T
+      - datasets/DS_SAP_01_TSPAT
+      - datasets/DS_SAP_01_TVAKT
+      - datasets/DS_SAP_01_TVAU
+      - datasets/DS_SAP_01_TVAUT
+      - datasets/DS_SAP_01_TVFST
+      - datasets/DS_SAP_01_TVKOT
+      - datasets/DS_SAP_01_TVLST
+      - datasets/DS_SAP_01_TVSBT
+      - datasets/DS_SAP_01_TVTWT
+      - datasets/DS_SAP_01_TVV4T
       - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBUK
       outputs:
@@ -1957,7 +1986,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-05 14:04:27'
+    modifiedAt: '2023-05-05 19:18:50'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
