JEKT-14 🔁 Modified     - Job        - JOB_MD_BOM_HDR        - JOB_MD_BOM_HDR_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7453,7 +7453,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-04 15:45:43'
-    modifiedAt: '2023-05-05 18:26:10'
+    modifiedAt: '2023-05-05 20:31:14'
     author: smille29@its.jnj.com
   jobs/JOB_MD_MATL_INV_HM2:
     name: JOB_MD_MATL_INV_HM2
@@ -7961,7 +7961,7 @@ jobs:
     modifiedAt: '2023-04-27 20:52:46'
     author: smille29@its.jnj.com
   jobs/JOB_MD_BOM_HDR_HMD:
-    name: JOB_MD_BOM_HDR_HMD
+    name: JOB_MD_BOM_HDR_HM2
     description: ''
     fabricUID: 32
     scheduler:
@@ -7983,7 +7983,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 18:26:51'
-    modifiedAt: '2023-05-05 18:28:20'
+    modifiedAt: '2023-05-05 20:28:35'
     author: fsano1@its.jnj.com
 functions:
   author: null
