--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1870,6 +1870,33 @@ pipelines:
       - datasets/MD_SLS_ORDR
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_TAI:
+    name: SAP_01_MD_SLS_ORDR_TAI
+    description: ''
+    author: lsorarra@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-05 19:55:55'
+    modifiedAt: '2023-05-05 20:53:42'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_T001
+      - datasets/DS_SAP_01_T176T
+      - datasets/DS_SAP_01_TSPAT
+      - datasets/DS_SAP_01_TVAKT
+      - datasets/DS_SAP_01_TVAU
+      - datasets/DS_SAP_01_TVAUT
+      - datasets/DS_SAP_01_TVFST
+      - datasets/DS_SAP_01_TVKOT
+      - datasets/DS_SAP_01_TVLST
+      - datasets/DS_SAP_01_TVTWT
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBUK
+      outputs:
+      - datasets/MD_SLS_ORDR
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
