JEKT-1726 Creation of new pipeline ❇️ New     - Pipeline        - SAP_MD_MATL_VALUT

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1971,6 +1971,20 @@ pipelines:
       - datasets/MD_PRCH_DELV_CNFRMS
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MATL_VALUT:
+    name: SAP_MD_MATL_VALUT
+    description: Valuation of material inventory
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-06 08:36:05'
+    modifiedAt: '2023-05-06 08:36:10'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
