JEKT-1726 Created new dataset and made lookup for MEINS ❇️ New     - Dataset        - DS_SAP_MBEW_01
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_VALUT
    - Dataset
       - DS_SAP_MARA_01

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1979,9 +1979,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-06 08:36:05'
-    modifiedAt: '2023-05-06 08:36:10'
+    modifiedAt: '2023-05-06 09:54:10'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_SAP_MARA_01
+      - datasets/DS_SAP_MBEW_01
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -5396,7 +5398,7 @@ datasets:
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-04-05 12:03:26'
-    modifiedAt: '2023-04-13 13:48:15'
+    modifiedAt: '2023-05-06 09:38:06'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6741,6 +6743,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-05 18:43:35'
         modifiedAt: '2023-04-05 18:43:35'
+  datasets/DS_SAP_MBEW_01:
+    name: DS_SAP_MBEW_01
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-06 09:50:07'
+    modifiedAt: '2023-05-06 09:50:07'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-06 09:50:07'
+        modifiedAt: '2023-05-06 09:50:07'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
