JEKT-1783 - 🔁 Modified - Updated Jobs for missing Pipeline after review     - Job        - BW2_PIPELINE_JOB        - GMD_PIPELINE_JOB        - HM2_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7318,6 +7318,7 @@ jobs:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
     - pipelines/JDE_MD_MATL_BW2
+    - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_MATL_INV
@@ -7327,7 +7328,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:19:52'
-    modifiedAt: '2023-05-06 14:51:07'
+    modifiedAt: '2023-05-06 20:44:40'
     author: smille29@its.jnj.com
   jobs/DEV_DEU_PIPELINE_JOB:
     name: DEU_PIPELINE_JOB
@@ -7408,6 +7409,7 @@ jobs:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
     - pipelines/JDE_MD_MATL_LOC_GMD
+    - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_MATL_INV
@@ -7417,7 +7419,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:23:35'
-    modifiedAt: '2023-05-06 14:55:19'
+    modifiedAt: '2023-05-06 20:45:51'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
     name: JEM_PIPELINE_JOB
@@ -8053,6 +8055,7 @@ jobs:
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_MD_DELV_LINE_HM2
     - pipelines/SAP_MD_SLS_DOC_PTNR_FUNC_HM2
+    - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_MATL_LOC_HMD
     jobClusterMode:
       clusterMode:
@@ -8060,7 +8063,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-26 20:17:30'
-    modifiedAt: '2023-05-06 16:10:38'
+    modifiedAt: '2023-05-06 20:50:47'
     author: smille29@its.jnj.com
   jobs/JOB_MD_SLS_DOC_PTNR_FUNC_HM2:
     name: JOB_MD_SLS_DOC_PTNR_FUNC_HM2
