JEKT-1395 🔁 Modified     - Job        - JOB_MD_PO_HIST        - JOB_MD_SLS_ORDR        - JOB_MD_SLS_ORDR_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7907,7 +7907,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-19 05:06:58'
-    modifiedAt: '2023-04-19 12:41:18'
+    modifiedAt: '2023-05-06 22:06:33'
     author: jcacere7@its.jnj.com
   jobs/JOB_MD_SHIP:
     name: JOB_MD_SHIP
@@ -7955,13 +7955,19 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_SLS_ORDR_BBA
+    - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
+    - pipelines/SAP_01_MD_SLS_ORDR_BBL
+    - pipelines/SAP_01_MD_SLS_ORDR_BWI
+    - pipelines/SAP_01_MD_SLS_ORDR_TAI
+    - pipelines/SAP_01_MD_SLS_ORDR_HCS
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 21:21:01'
-    modifiedAt: '2023-05-05 21:22:14'
+    modifiedAt: '2023-05-06 22:12:01'
     author: lsorarra@its.jnj.com
   jobs/JOB_MD_SLS_ORDR_HM2:
     name: JOB_MD_SLS_ORDR_HM2
@@ -7978,14 +7984,15 @@ jobs:
       onStart: false
       onSuccess: false
       onFailure: false
-    pipelines: []
+    pipelines:
+    - pipelines/SAP_01_MD_SLS_ORDR_HMD
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 21:28:17'
-    modifiedAt: '2023-05-05 21:28:53'
+    modifiedAt: '2023-05-06 21:41:51'
     author: lsorarra@its.jnj.com
 functions:
   author: null
