JEKT-1341 Minor updates (Remove space for CRNCY_KEY in SchemaTransform Gem) 🔁 Modified     - Pipeline        - SAP_01_MD_PLNT     - Dataset        - MD_PLNT

--- a/src/datasets/MD_PLNT/pbt_aspects.yml
+++ b/src/datasets/MD_PLNT/pbt_aspects.yml
@@ -149,7 +149,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: 'CRNCY_KEY   '
+  - name: CRNCY_KEY
     type: string
     nullable: true
     metadata:
