JEKT-1395 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_HMD     - Dataset        - MD_SLS_ORDR

--- a/src/datasets/MD_SLS_ORDR/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR/pbt_aspects.yml
@@ -30,13 +30,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: CRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: DAI_ETL_ID
     type: integer
     nullable: false
@@ -130,6 +123,13 @@ schema:
       tags: []
   - name: CUST_PO_TYPE_CD
     type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CRT_DTTM
+    type: timestamp
     nullable: true
     metadata:
       description: ''
@@ -492,6 +492,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: CLS_OF_TRD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: FORBID_SLS_IN
     type: string
     nullable: true
@@ -535,6 +542,13 @@ schema:
       mappings: []
       tags: []
   - name: DIV_NM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SHIPPING_COND_DESC
     type: string
     nullable: true
     metadata:
@@ -604,7 +618,231 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: CLS_OF_TRD
+  - name: CR_CHK_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REJ_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNFRM_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PSTNG_BILL_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INTCO_BILL_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ORDR_BILL_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BILL_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRCSG_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PICK_CNFRM_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PICK_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DELV_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DELV_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WM_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PACK_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INVC_LIST_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REF_DOC_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REF_DOC_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TRNSP_PLAN_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ICMPT_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BILL_ICMPT_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PACKICMPT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PACKICMPT_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PICKICMPT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PICKICMPT_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRCICMPT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DELVICMPT_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GMICMPT_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GM_TOT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DELV_BLK_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RESV_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: OVRL_HDR_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BILL_BLK_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: OVRL_BLK_STS_CD
     type: string
     nullable: true
     metadata:
