JEKT-1367 🔁 Modified rule for MAX_STCK_HGHT_PKGNG_MATL to make it decimal instead of string.     - Pipeline        - SAP_01_MD_CUST_HMD_HM2     - Dataset        - MD_CUST

--- a/src/datasets/MD_CUST/pbt_aspects.yml
+++ b/src/datasets/MD_CUST/pbt_aspects.yml
@@ -2999,7 +2999,7 @@ schema:
       mappings: []
       tags: []
   - name: MAX_STCK_HGHT_PKGNG_MATL
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
