JEKT-1367 🔁 Modified datatype rules for couple of fields     - Pipeline        - SAP_01_MD_CUST_HMD_HM2     - Dataset        - MD_CUST

--- a/src/datasets/MD_CUST/pbt_aspects.yml
+++ b/src/datasets/MD_CUST/pbt_aspects.yml
@@ -3412,21 +3412,21 @@ schema:
       mappings: []
       tags: []
   - name: HRS_PER_MO
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: HRS_PER_DAY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: NUM_OF_DAYS_MO
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
