JEKT-1367 ❇️ New     - Dataset        - DS_SAP_01_T077X
🔁 Modified
    - Pipeline
       - SAP_01_MD_CUST_HMD_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1997,9 +1997,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-18 01:51:03'
-    modifiedAt: '2023-05-08 13:35:35'
+    modifiedAt: '2023-05-08 14:59:48'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T077X
       - datasets/DS_SAP_01_TBRCT
       - datasets/DS_SAP_01_TVAST
       - datasets/DS_SAP_03_KNA1
@@ -6932,6 +6933,21 @@ datasets:
         author: jcacere7@its.jnj.com
         createdAt: '2023-05-05 15:43:10'
         modifiedAt: '2023-05-05 15:43:10'
+  datasets/DS_SAP_01_T077X:
+    name: DS_SAP_01_T077X
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-05-08 14:47:21'
+    modifiedAt: '2023-05-08 14:47:21'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-05-08 14:47:21'
+        modifiedAt: '2023-05-08 14:47:21'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
