JEKT-1395 ❇️ New     - Dataset        - DS_SAP_07_VBAK
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_HCS
    - Dataset
       - MD_SLS_ORDR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1760,7 +1760,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-05 13:15:30'
-    modifiedAt: '2023-05-08 15:56:56'
+    modifiedAt: '2023-05-08 16:51:04'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T001
@@ -1779,7 +1779,7 @@ pipelines:
       - datasets/DS_SAP_01_TVV4T
       - datasets/DS_SAP_01_TVV5T
       - datasets/DS_SAP_01_VBUK
-      - datasets/DS_SAP_06_VBAK
+      - datasets/DS_SAP_07_VBAK
       outputs:
       - datasets/MD_SLS_ORDR
     subgraphs: []
@@ -2065,7 +2065,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-06 23:01:07'
+    modifiedAt: '2023-05-08 16:34:59'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6823,6 +6823,21 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-05-08 15:50:29'
         modifiedAt: '2023-05-08 15:50:29'
+  datasets/DS_SAP_07_VBAK:
+    name: DS_SAP_07_VBAK
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-08 16:34:38'
+    modifiedAt: '2023-05-08 16:34:38'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-08 16:34:38'
+        modifiedAt: '2023-05-08 16:34:38'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
