JEKT-1735 SAP Pipeline (Initial Config & DS) ❇️ New     - Dataset        - DS_SAP_01_MCH1        - DS_SAP_01_MCHA     - Pipeline        - SAP_01_MD_BTCH

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1971,6 +1971,22 @@ pipelines:
       - datasets/MD_PRCH_DELV_CNFRMS
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_BTCH:
+    name: SAP_01_MD_BTCH
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-08 17:49:25'
+    modifiedAt: '2023-05-08 18:08:39'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_MCH1
+      - datasets/DS_SAP_01_MCHA
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -6727,6 +6743,36 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-05 18:43:35'
         modifiedAt: '2023-04-05 18:43:35'
+  datasets/DS_SAP_01_MCHA:
+    name: DS_SAP_01_MCHA
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-05-08 18:01:11'
+    modifiedAt: '2023-05-08 18:01:11'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-05-08 18:01:11'
+        modifiedAt: '2023-05-08 18:01:11'
+  datasets/DS_SAP_01_MCH1:
+    name: DS_SAP_01_MCH1
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-05-08 18:02:43'
+    modifiedAt: '2023-05-08 18:02:43'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-05-08 18:02:43'
+        modifiedAt: '2023-05-08 18:02:43'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
