JEKT-1395 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_BBA_MRS_FSN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1792,7 +1792,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-05 14:08:27'
-    modifiedAt: '2023-05-08 14:33:49'
+    modifiedAt: '2023-05-08 18:23:53'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T001
@@ -1810,8 +1810,8 @@ pipelines:
       - datasets/DS_SAP_01_TVV3T
       - datasets/DS_SAP_01_TVV4T
       - datasets/DS_SAP_01_TVV5T
-      - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBUK
+      - datasets/DS_SAP_08_BVAK
       outputs:
       - datasets/MD_SLS_ORDR
     subgraphs: []
