JEKT-1367 🔁 Modified Refrmat gem     - Pipeline        - SAP_01_MD_CUST_HMD_HM2     - Dataset        - MD_CUST        - DS_SAP_03_KNA1        - DS_SAP_01_T077X

--- a/src/datasets/MD_CUST/pbt_aspects.yml
+++ b/src/datasets/MD_CUST/pbt_aspects.yml
@@ -1647,13 +1647,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: "FILL_PBE_DOC_IN\r\n"
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: BLOK_IN_DOC_ENT
     type: string
     nullable: true
@@ -1874,6 +1867,20 @@ schema:
   - name: _deleted_
     type: string
     nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FILL_PBE_DOC_IN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNAE
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
