JEKT-1395 ❇️ New     - Dataset        - DS_SAP_09_VBAK
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_HMD
    - Dataset
       - MD_SLS_ORDR

--- a/src/datasets/MD_SLS_ORDR/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR/pbt_aspects.yml
@@ -30,13 +30,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: CRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: DAI_ETL_ID
     type: integer
     nullable: false
@@ -130,6 +123,13 @@ schema:
       tags: []
   - name: CUST_PO_TYPE_CD
     type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CRT_DTTM
+    type: timestamp
     nullable: true
     metadata:
       description: ''
@@ -492,6 +492,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: CLS_OF_TRD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: FORBID_SLS_IN
     type: string
     nullable: true
@@ -535,6 +542,13 @@ schema:
       mappings: []
       tags: []
   - name: DIV_NM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SHIPPING_COND_DESC
     type: string
     nullable: true
     metadata:
@@ -829,13 +843,6 @@ schema:
       mappings: []
       tags: []
   - name: OVRL_BLK_STS_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CLS_OF_TRD
     type: string
     nullable: true
     metadata:
