--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1905,7 +1905,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-05 22:14:59'
-    modifiedAt: '2023-05-08 15:15:55'
+    modifiedAt: '2023-05-08 19:23:56'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T001
@@ -1919,7 +1919,7 @@ pipelines:
       - datasets/DS_SAP_01_TVLST
       - datasets/DS_SAP_01_TVSBT
       - datasets/DS_SAP_01_TVTWT
-      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_09_VBAK
       outputs:
       - datasets/MD_SLS_ORDR
     subgraphs: []
@@ -2065,7 +2065,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-08 16:34:59'
+    modifiedAt: '2023-05-08 19:02:47'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6853,6 +6853,21 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-05-08 17:29:10'
         modifiedAt: '2023-05-08 17:29:10'
+  datasets/DS_SAP_09_VBAK:
+    name: DS_SAP_09_VBAK
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-08 19:02:19'
+    modifiedAt: '2023-05-08 19:02:19'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-08 19:02:19'
+        modifiedAt: '2023-05-08 19:02:19'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
