--- a/src/datasets/MD_BTCH/pbt_aspects.yml
+++ b/src/datasets/MD_BTCH/pbt_aspects.yml
@@ -1,1 +1,18 @@
 version: 1
+schema:
+  type: struct
+  fields:
+  - name: SRC_SYS_CD
+    type: string
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SRC_TBL_NM
+    type: string
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
