--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1979,12 +1979,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-08 17:49:25'
-    modifiedAt: '2023-05-08 18:08:39'
+    modifiedAt: '2023-05-08 19:48:18'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MCH1
       - datasets/DS_SAP_01_MCHA
-      outputs: []
+      outputs:
+      - datasets/MD_BTCH
     subgraphs: []
     dependencies: {}
 datasets:
@@ -3043,7 +3044,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-08 19:48:18'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
