--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1924,6 +1924,38 @@ pipelines:
       - datasets/MD_SLS_ORDR
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_ATL:
+    name: SAP_01_MD_SLS_ORDR_ATL
+    description: ''
+    author: lsorarra@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-08 20:40:47'
+    modifiedAt: '2023-05-08 20:57:16'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_T001
+      - datasets/DS_SAP_01_T176T
+      - datasets/DS_SAP_01_TSPAT
+      - datasets/DS_SAP_01_TVAKT
+      - datasets/DS_SAP_01_TVAU
+      - datasets/DS_SAP_01_TVAUT
+      - datasets/DS_SAP_01_TVFST
+      - datasets/DS_SAP_01_TVKOT
+      - datasets/DS_SAP_01_TVLST
+      - datasets/DS_SAP_01_TVSBT
+      - datasets/DS_SAP_01_TVTWT
+      - datasets/DS_SAP_01_TVV2T
+      - datasets/DS_SAP_01_TVV3T
+      - datasets/DS_SAP_01_TVV4T
+      - datasets/DS_SAP_01_TVV5T
+      - datasets/DS_SAP_01_VBUK
+      - datasets/DS_SAP_08_BVAK
+      outputs:
+      - datasets/MD_SLS_ORDR
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2065,7 +2097,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-08 19:02:47'
+    modifiedAt: '2023-05-08 20:47:30'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
