JEKT-1395 🔁 Modified     - Job        - JOB_MD_SLS_ORDR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -8048,7 +8048,9 @@ jobs:
     pipelines:
     - pipelines/SAP_01_MD_SLS_ORDR_BBA
     - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/SAP_01_MD_SLS_ORDR_HMD
     - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
+    - pipelines/SAP_01_MD_SLS_ORDR_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_BBL
     - pipelines/SAP_01_MD_SLS_ORDR_BWI
     - pipelines/SAP_01_MD_SLS_ORDR_TAI
@@ -8059,7 +8061,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 21:21:01'
-    modifiedAt: '2023-05-06 22:12:01'
+    modifiedAt: '2023-05-08 21:18:42'
     author: lsorarra@its.jnj.com
   jobs/JOB_MD_SLS_ORDR_HM2:
     name: JOB_MD_SLS_ORDR_HM2
