JEKT-1726 Added select fields and target gems 🔁 Modified     - Pipeline        - SAP_MD_MATL_VALUT     - Dataset        - MD_MATL_VALUT

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1979,12 +1979,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-06 08:36:05'
-    modifiedAt: '2023-05-09 10:22:21'
+    modifiedAt: '2023-05-09 10:41:40'
     datasets:
       inputs:
       - datasets/DS_SAP_MARA_01
       - datasets/DS_SAP_MBEW_01
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_VALUT
     subgraphs: []
     dependencies: {}
 datasets:
@@ -3328,7 +3329,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-09 10:41:40'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
