--- a/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
@@ -136,7 +136,7 @@ schema:
       mappings: []
       tags: []
   - name: DAI_ETL_ID
-    type: string
+    type: integer
     nullable: false
     metadata:
       description: ''
