Reverted to JEKT-1726 Added select fields and target gems 🔁 Modified     - Pipeline        - SAP_MD_MATL_VALUT     - Dataset        - MD_MATL_VALUT, commit hash : 8b8f3f0096bc6c29bca3ba7fe3ee7c7781a704cb

--- a/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
@@ -136,7 +136,7 @@ schema:
       mappings: []
       tags: []
   - name: DAI_ETL_ID
-    type: integer
+    type: string
     nullable: false
     metadata:
       description: ''
