--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -55,7 +55,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 08:44:36'
-    modifiedAt: '2023-04-25 00:03:04'
+    modifiedAt: '2023-05-09 12:42:44'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101
@@ -1986,6 +1986,22 @@ pipelines:
       - datasets/DS_SAP_MBEW_01
       outputs:
       - datasets/MD_MATL_VALUT
+    subgraphs: []
+    dependencies: {}
+  pipelines/MD_MATL_VALUT_JDE:
+    name: MD_MATL_VALUT_JDE
+    description: Valuation of material inventory for JDE Systems
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-09 12:49:52'
+    modifiedAt: '2023-05-09 12:59:59'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F41021
+      - datasets/DS_JDE_01_F4105
+      outputs: []
     subgraphs: []
     dependencies: {}
 datasets:
@@ -4619,7 +4635,7 @@ datasets:
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-03-20 14:47:11'
-    modifiedAt: '2023-04-13 15:25:02'
+    modifiedAt: '2023-05-09 12:56:59'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6759,6 +6775,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-06 09:50:07'
         modifiedAt: '2023-05-06 09:50:07'
+  datasets/DS_JDE_01_F4105:
+    name: DS_JDE_01_F4105
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-09 12:56:32'
+    modifiedAt: '2023-05-09 12:59:59'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-09 12:56:32'
+        modifiedAt: '2023-05-09 12:56:32'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
