JEKT-1209 Corrected SHRT_MATL_NUM issue picked up in testing 🔁 Modified     - Pipeline        - SAP_MD_MATL_BBL     - Dataset        - MD_MATL

--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -184,6 +184,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_SPEC_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_SPEC_VERS_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: CHG_BY
     type: string
     nullable: true
@@ -492,140 +506,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MFR_BOOK_PART_NUM
+  - name: MATL_GRP_DESC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DIR_SHP_FL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FIN_PLNT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MAIN_STRG_LOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PCS_PER_SLS_UNT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PROD_LINE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MAKE_BUY_IN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STRT_PLNT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_SHRT_DESC_UP_CASE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FRAN_CD_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BASE_UOM_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: OBJ_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TYPE_OF_MATERIAL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STERILE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BRAVO_MINOR_CODE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BRAVO_MINOR_CODE_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NDL_SLS_TYPE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SUTURE_LENGTH_INCH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SER_TYPE
-    type: integer
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CMMDTY
+  - name: MATL_GRP_DESC_2
     type: string
     nullable: true
     metadata:
@@ -635,27 +523,6 @@ schema:
   - name: SHRT_MATL_NUM
     type: string
     nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NDL_COLOR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NDL_ALLOY
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SUTURE_USP
-    type: string
-    nullable: true
     metadata:
       description: ''
       mappings: []
