--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -23,6 +23,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: BRND_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: FRANCHISE_CD
     type: string
     nullable: true
@@ -171,20 +178,6 @@ schema:
       mappings: []
       tags: []
   - name: MATL_CAT_GRP_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_SPEC_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_SPEC_VERS_NUM
     type: string
     nullable: true
     metadata:
@@ -429,6 +422,27 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_TYPE_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_GRP_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_GRP_DESC_2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: EAN_UPC_HRMZD
     type: string
     nullable: true
@@ -488,27 +502,6 @@ schema:
   - name: _deleted_
     type: string
     nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_TYPE_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_GRP_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_GRP_DESC_2
-    type: string
-    nullable: true
     metadata:
       description: ''
       mappings: []
