JEKT-1209 Corrected SHRT_MATL_NUM issue picked up in testing 🔁 Modified     - Pipeline        - SAP_MD_MATL_BBA_BBN     - Dataset        - MD_MATL

--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -184,6 +184,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_SPEC_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_SPEC_VERS_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: CHG_BY
     type: string
     nullable: true
@@ -422,27 +436,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MATL_TYPE_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_GRP_DESC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_GRP_DESC_2
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: EAN_UPC_HRMZD
     type: string
     nullable: true
@@ -502,6 +495,27 @@ schema:
   - name: _deleted_
     type: string
     nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_TYPE_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_GRP_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_GRP_DESC_2
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
