--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1971,6 +1971,20 @@ pipelines:
       - datasets/MD_BILL_DOC_HDR
     subgraphs: []
     dependencies: {}
+  pipelines/MD_MFG_ORDER_ITM:
+    name: MD_MFG_ORDER_ITM
+    description: ''
+    author: hgermi1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-09 23:11:42'
+    modifiedAt: '2023-05-09 23:11:46'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
