JEKT-1395 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_TAI        - SAP_01_MD_SLS_ORDR_HCS        - SAP_01_MD_SLS_ORDR_BBN_GEU_P01_MBP_SVS        - JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES        - SAP_01_MD_SLS_ORDR_BBA_MRS_FSN     - Dataset        - MD_SLS_ORDR

--- a/src/datasets/MD_SLS_ORDR/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR/pbt_aspects.yml
@@ -562,7 +562,28 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: CUST_GRP_1_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CUST_GRP_2_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: CUST_GRP_4_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CUST_GRP_5_DESC
     type: string
     nullable: true
     metadata:
@@ -801,6 +822,13 @@ schema:
       mappings: []
       tags: []
   - name: OVRL_BLK_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CLS_OF_TRD
     type: string
     nullable: true
     metadata:
